--- a/frontend/src/components/ForestCardView.css
+++ b/frontend/src/components/ForestCardView.css
@@ -1,5 +1,5 @@
-@import '~antd/dist/antd.css';
+@import "~antd/dist/antd.css";
 
 .site-card-wrapper {
-    padding: 30px;
-  }
+  padding: 30px;
+}
